# EclipseDTL

./: Cargo.toml  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml
scripts/: ci.sh  tests.sh
src/: accounts.rs  amount.rs  asset.rs  auction.rs  batch.rs  codec.rs  error.rs  events.rs  ids.rs  lib.rs  main.rs  operators.rs  policy.rs  portfolio.rs  reconciliation.rs  risk.rs  routes.rs  scenario.rs  schedule.rs  settlement.rs  telemetry.rs
tests/fixtures/: fallback_batch.json  normal_batch.json
tests/node/: eclipsedtl.test.js
